--- a/doc/レコレコ/css/login.css
+++ b/doc/レコレコ/css/login.css
@@ -11,7 +11,7 @@ body {
     background-color: #B3C8CF;
     list-style-type: none;
     padding: 20px;
-
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,7 +28,7 @@ body {
 
 h1 {
     color: #ffffff;
-    margin: 3px 0 0 0;
+    margin: 3px 0 0 0 ;
     font-size: 40px;
 }
 
@@ -36,17 +36,17 @@ h3 {
     color: #ffffff;
     background-color: #B3C8CF;
     margin: 60px 400px 0px 400px;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 10px 0 ;
     text-align: center;
 }
 
 .table {
     background-color: #ffffff;
     margin: 0px 100px 500px 400px;
-    padding: 50px 29px 50px 50px;
+    padding: 50px 29px 50px 50px ;
 }
 
-.table a {
+.table  a {
     margin: 0 30px 0 300px;
     color: #696969;
     text-decoration: none;
@@ -57,9 +57,7 @@ label {
     margin: 0 30px 0 30px;
 }
 
-input[name=id],
-input[name=pass],
-input[name=name] {
+input[name=id], input[name=pass], input[name=name] {
     border: 1px solid #ccc;
     height: 3em;
     width: 38em;
@@ -68,7 +66,6 @@ input[name=name] {
 }
 
 input[name=submit] {
-
     border: none;
     margin: 30px 30px 10px 30px;
     padding: 20px 60px 20px 50px;
@@ -76,6 +73,5 @@ input[name=submit] {
     color: #ffffff;
     background-color: #1e90ff;
     font-size: 1.2em;
-    border-radius: 20px;
-    /*ログインボタンの角を丸くする*/
+    border-radius: 20px; /*ログインボタンの角を丸くする*/
 }
