--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -36,6 +36,35 @@ body {
     margin: 5px 100px 0 0;
 }
 
+/*フッター--------------------------------------*/
+footer a{
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.gotop{
+    display: block;
+    margin-bottom: 30px;
+    margin-right:30px;
+	width: 20px;
+	height: 20px;
+	border-top: 3px solid #FFFFFF;
+	border-right: 3px solid #FFFFFF;
+	transform: rotate(-45deg)
+}
+
+.copyright{
+	padding: 50px;
+	background-color: #B3C8CF;
+	color: #FFFFFF;
+	text-align: center;
+}
+
 /*削除ボタン------------------------------------*/
 .delete-button {
     border: 1px solid black;
@@ -45,3 +74,5 @@ body {
     align-items: center;
     border-radius: 10px;
 }
+
+
