ホーム、登録、管理　完成jsp,css

--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -77,3 +77,32 @@ input[name=submit] {
     font-size: 1.2em;
     border-radius: 20px; /*ログインボタンの角を丸くする*/
 }
+
+/* フッター */
+footer a{
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.gotop{
+    display: block;
+    margin-bottom: 30px;
+    margin-right:30px;
+	width: 20px;
+	height: 20px;
+	border-top: 3px solid #FFFFFF;
+	border-right: 3px solid #FFFFFF;
+	transform: rotate(-45deg)
+}
+
+.copyright{
+	padding: 50px;
+	background-color: #B3C8CF;
+	color: #FFFFFF;
+	text-align: center;
+}
