--- a/WebContent/css/userRegist.css
+++ b/WebContent/css/userRegist.css
@@ -1,33 +1,5 @@
 @charset "UTF-8";
 
-html {
-    font-size: 16px;
-    font-family: sans-serif;
-}
-
-body {
-    background-color: #F1EEDC;
-}
-
-.nav ul {
-    background-color: #B3C8CF;
-    list-style-type: none;
-    padding: 20px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 80px;
-}
-
-.nav img {
-    margin: 10px 10px 10px 0;
-}
-
-.nav a:last-child {
-    margin: 5px 100px 0 0;
-}
-
 h1 {
     color: #ffffff;
     margin: 3px 0 0 0 ;
@@ -135,7 +107,7 @@ input[type="radio"] {
 
 /* ラジオボタンが選択されたときのスタイル */
 input[type="radio"]:checked {
-    background-color: #1e90ff; /* 選択されたときの背景色 */
+    background-color: #35AFDB; /* 選択されたときの背景色 */
     padding: 4px; /* 枠線と背景の間に空白を入れる */
 }
 
@@ -153,36 +125,7 @@ input[name=submit] {
     padding: 20px 60px 20px 50px;
     width: 500px;
     color: #ffffff;
-    background-color: #1e90ff;
+    background-color: #35AFDB;
     font-size: 1.2em;
     border-radius: 20px; /*ログインボタンの角を丸くする*/
-}
-
-/* フッター */
-footer a{
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.gotop{
-    display: block;
-    margin-bottom: 30px;
-    margin-right:30px;
-	width: 20px;
-	height: 20px;
-	border-top: 3px solid #FFFFFF;
-	border-right: 3px solid #FFFFFF;
-	transform: rotate(-45deg)
-}
-
-.copyright{
-	padding: 50px;
-	background-color: #B3C8CF;
-	color: #FFFFFF;
-	text-align: center;
 }
