--- a/doc/レコレコ/css/postmodal.css
+++ b/doc/レコレコ/css/postmodal.css
@@ -31,23 +31,36 @@ input[name=title] {
   border: 1px solid #ccc;
   height: 3em;
   width: 38em;
-  margin: 3px 30px;
+  margin: 3px 5px;
   background-color: #dcdcdc;
   /*border-radius: 10px; /*ŽlŠp‚ÌŠp‚ðŠÛ‚­‚·‚é*/
 }
 
-input[name=my_introduction] {
+.textbox{
   border: 1px solid #ccc;
   height: 13em;
   width: 38em;
-  margin: 3px 30px;
+  margin: 3px 5px;
   background-color: #dcdcdc;
   /*border-radius: 10px; /*ŽlŠp‚ÌŠp‚ðŠÛ‚­‚·‚é*/
 }
 
 .title{
-text-align: left;
+  text-align: left;
+  margin: 3px 30px;
 }
 .maintext{
 text-align: left;
+width: 38em;
+margin: 3px 30px;
+}
+
+
+.box1 {
+  font-weight: bold;
+  border: solid 3px #000000;
+}
+.box1 p {
+  margin: 0; 
+  padding: 0;
 }
