--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -11,6 +11,7 @@
 html {
     font-size: 16px;
     font-family: sans-serif;
+    color:#545454
 }
 
 body {
@@ -21,19 +22,134 @@ body {
 .nav ul {
     background-color: #B3C8CF;
     list-style-type: none;
-    padding: 20px;
+    padding: 10px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    gap: 80px;
 }
 
-.nav img {
+/*常に<h1>をでサイン指定*/
+.nav h1 a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: larger;
+    padding: 0 20px;
+}
+
+.nav h1 a:hover,
+.nav h1 a:focus,
+.nav h1 a:active {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/* 検索フォーム */
+
+.search-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 10px;
+    margin-right: 20px;
+}
+
+.search-box{
+    display: flex;
+}
+
+.search-box select{
+    position: relative;
+    width: 130px;
+    border-radius: 20px 0px 0px 20px;
+    padding: 10px;
+    background-color: #54A3BF;
+    color: #FFFFFF;
+}
+
+.search-input {
+    width: 300px;
+    padding: 10px 50px 10px 10px;
+    box-sizing: border-box;
+    border-radius: 0px 20px 20px 0px;
+}
+
+/*imgのデザイン指定*/
+.nav .search-button {
+    position: absolute;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    display: block;
+    margin: 18px 390px;
+}
+
+.nav .post-button {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    display: block;
+    margin-right: 250px;
+}
+
+.nav .icon-img {
     margin: 10px 10px 10px 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
 }
 
-.nav a:last-child {
-    margin: 5px 100px 0 0;
+/* メニューの初期状態を非表示に */
+header .nav .dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #cee9ef;
+    width: 170px;
+    font-size: 1em;
+    text-align: left;
+    box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
+    padding: 0px  10px 0px  10px;
+    z-index: 1;
+    left: -50px; /* メニューを左に20ピクセル移動 */
+    margin-left: 100px;
+    padding-top: 0;
+}
+
+header .nav .dropdown-menu li {
+    border-bottom: 1px solid #545454;
+}
+
+header .nav .dropdown-menu li:last-child {
+    border-bottom: none;
+}
+
+header .nav .dropdown-menu li a {
+    display: block;
+    padding: 7px;
+    text-decoration: none;
+    color: #545454;
+}
+.co{
+    position: relative;
+    display: inline-block;
+    margin: 0 100px 0 10px;
+}
+
+.dropdown-menu a {
+    color: #545454;
+    background-color: #cee9ef;
+    font-size: 0.8m;
+    text-decoration: none;
+}
+
+/* アイコン画像をホバーした際にメニューを表示 */
+.nav li:hover .dropdown-menu {
+    display: block;
+}
+
+.nav .user-name{
+    color: #545454;
+    text-decoration: none;
+    margin-right: 30px;
 }
 
 /*フッター--------------------------------------*/
@@ -49,7 +165,7 @@ footer a{
 
 .gotop{
     display: block;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     margin-right:30px;
 	width: 20px;
 	height: 20px;
@@ -59,7 +175,7 @@ footer a{
 }
 
 .copyright{
-	padding: 50px;
+	padding: 35px;
 	background-color: #B3C8CF;
 	color: #FFFFFF;
 	text-align: center;
