--- a/doc/レコレコ/css/postmodal.css
+++ b/doc/レコレコ/css/postmodal.css
@@ -1,3 +1,73 @@
+/* modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  text-align: center;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  height: 50%;
+  border-radius: 13px;
+  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 125px;
+  margin-bottom: 125px;
+}
+
+.modal1-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  height: 100%;
+  border-radius: 13px;
+  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 125px;
+  margin-bottom: 125px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn {
+  display: block;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
 /* ポスト */
 .modalhed{
   text-align: center;
@@ -44,21 +114,29 @@ input[name=title] {
   background-color: #dcdcdc;
   /*border-radius: 10px; /*四角の角を丸くする*/
 }
-
-.taitoru{
-  text-align: left;
+.textbox1{
+  border: 1px solid #ccc;
   height: 3em;
   width: 38em;
   margin: 3px 5px;
+  background-color: #dcdcdc;
+  /*border-radius: 10px; /*四角の角を丸くする*/
 }
-p.honnbunn{
+
+.modaltitle{
+  text-align: left;
+  height: 3px;
+  width: 38em;
+  margin: 3px 5px;
+}
+.modaltext{
 text-align: left;
-height: 13em;
+height: 3em;
 width: 38em;
 margin: 3px 5px;
 }
 
-
+/* ボックス */
 .box1 {
   padding: 0.5em 1px;
   margin: 5px 40px;
@@ -68,4 +146,100 @@ margin: 3px 5px;
 .box1 p {
   margin: 0; 
   padding: 0;
+}
+
+.box2 {
+  padding: 0.5em 1px;
+  margin: 5px 40px;
+  font-weight: bold;
+  border: solid 3px #000000;
+}
+.box1 p {
+  margin: 0; 
+  padding: 0;
+}
+
+/* タブ */
+#tabcontrol a {
+  margin-top: 0px;
+  line-height: 4em;
+  height: 20px;
+  width: 220px;
+  display: inline-block;
+  /* インラインブロック化 */
+  border-width: 1px 1px 0px 1px;
+  /* 下以外の枠線を引く */
+  border-style: solid;
+  text-align: center;
+  /* 枠線の種類：実線 */
+  border-color: white;
+  /* 枠線の色：黒色 */
+  border-radius: 0px 0px 0px 0px;
+  /* 枠線の左上角と右上角だけを丸く */
+  padding: 0px 30px 30px 0px;
+  /* 内側の余白 */
+  text-decoration: none;
+  /* リンクの下線を消す */
+  color: black;
+  /* 文字色：黒色 */
+  background-color: gray;
+  /* 背景色：白色 */
+  font-weight: bold;
+  /* 太字 */
+  position: relative;
+  /* JavaScriptでz-indexを調整するために必要 */
+}
+
+/*必須*/
+#tabcontrol a.selected {
+  background-color: white;
+}
+
+/*必須*/
+.area.selected {
+  display: block;
+}
+
+
+.area {
+  border: 1px solid white;
+  /* 枠線：黒色の実線を1pxの太さで引く */
+  margin: -16px 50px 0px 50px;
+  /* 上側にあるタブと1pxだけ重ねるために「-1px」を指定 */
+  padding: 1em;
+  /* 内側の余白量 */
+  background-color: white;
+  /* 背景色：白色 */
+
+  /* z-indexを調整するために必要 */
+
+  /* 重なり順序を「最も背面」にするため */
+  overflow: scroll;
+  height: 400px;
+  width: 426px;
+  display: none;
+}
+
+
+a[href="#tabpage2"] {
+  margin: 0px 0px 0px -10px;
+  display: none;
+}
+
+.contents {
+ /*display: flex;*/
+  border: 1px solid black;
+  border-radius: 10px;
+  align-items: center;
+  /* 中央に配置 */
+  gap: 5px;
+  margin: 20px 0px 0px 0px;
+
+
+}
+.title3{
+  text-align: left;
+}
+.maintext{
+  margin: 0;
 }
