--- a/doc/レコレコ/css/test.css
+++ b/doc/レコレコ/css/test.css
@@ -1,52 +1,67 @@
+/* 全体のスタイル */
 html {
     font-size: 16px;
+    /* ベースのフォントサイズ */
     font-family: sans-serif;
+    /* デフォルトのフォントファミリー */
 }
 
 body {
     background-color: #F1EEDC;
+    /* ページ全体の背景色 */
 }
 
-
-
+/* ナビゲーションのスタイル */
 .nav ul {
     background-color: #B3C8CF;
+    /* ナビゲーションバーの背景色 */
     list-style-type: none;
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    /* アイテム間の均等なスペース配置 */
     align-items: center;
     gap: 80px;
+    /* アイテム間の間隔 */
 }
 
 .nav img {
     margin: 10px 10px 10px 0;
+    /* アイコンのマージン */
 }
 
 .nav a:last-child {
     margin: 5px 100px 0 0;
+    /* 最後のアイテムのマージン */
 }
 
-/* メニューの初期状態を非表示に */
+/* ドロップダウンメニューのスタイル */
 header .nav .dropdown-menu {
     display: none;
+    /* 初期は非表示 */
     position: absolute;
     background-color: #cee9ef;
+    /* 背景色 */
     width: 200px;
+    /* メニューの幅 */
     margin: 0 50px 0 30px;
+    /* 位置調整のマージン */
     font-size: 1em;
+    /* フォントサイズ */
     text-align: center;
-    /* テキストを中央揃え */
+    /* テキストの中央揃え */
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
+    /* ボックスシャドウ */
     padding: 0px 20px 0px 10px;
+    /* 内側のパディング */
     z-index: 1;
     left: -50px;
-    /* メニューを左に20ピクセル移動 */
+    /* 20ピクセル左に移動 */
 }
 
 header .nav .dropdown-menu li {
     border-bottom: 1px solid #545454;
-    /* 各項目の下に線を追加 */
+    /* 各項目の下線 */
 }
 
 header .nav .dropdown-menu li:last-child {
@@ -56,7 +71,7 @@ header .nav .dropdown-menu li:last-child {
 
 header .nav .dropdown-menu li a {
     display: block;
-    /* リンクをブロック要素にすることで全体をクリック可能に */
+    /* 全体をクリック可能なブロック要素にする */
     padding: 3px 10px 10px 10px;
     /* リンクの内側の余白 */
     text-decoration: none;
@@ -65,22 +80,28 @@ header .nav .dropdown-menu li a {
     /* リンクの色 */
 }
 
+/* ヘッダー内のタイトル */
 h1 {
     color: #ffffff;
+    /* タイトルの色 */
     margin: 3px 0 0 0;
-    font-size: 38px;
+    /* マージン */
 }
 
+/* フッター内のリンク */
 footer a {
     position: fixed;
+    /* 固定位置 */
     bottom: 20px;
+    /* 下からの位置 */
     right: 20px;
-
+    /* 右からの位置 */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* 「トップへ戻る」ボタン */
 .gotop {
     display: block;
     margin-bottom: 30px;
@@ -88,392 +109,482 @@ footer a {
     width: 20px;
     height: 20px;
     border-top: 3px solid #FFFFFF;
+    /* ボーダーの上部 */
     border-right: 3px solid #FFFFFF;
-    transform: rotate(-45deg)
+    /* ボーダーの右側 */
+    transform: rotate(-45deg);
+    /* 45度回転 */
 }
 
+/* コピーライト情報 */
 .copyright {
     padding: 50px;
     background-color: #B3C8CF;
+    /* 背景色 */
     color: #FFFFFF;
+    /* テキスト色 */
     text-align: center;
+    /* 中央揃え */
 }
 
+/* コンテンツ内のリンク */
 .co {
     position: relative;
     display: inline-block;
     margin: 0 100px 0 10px;
+    /* マージン */
 }
 
+/* ドロップダウンメニュー内のリンク */
 .dropdown-menu a {
     color: #545454;
+    /* リンクの色 */
     background-color: #cee9ef;
+    /* 背景色 */
     font-size: 0.8m;
+    /* フォントサイズ */
     text-decoration: none;
+    /* 下線を削除 */
 }
 
 /* アイコン画像をホバーした際にメニューを表示 */
 .nav li:hover .dropdown-menu {
     display: block;
+    /* ホバー時にメニューを表示 */
 }
 
+/* 横並びのコンテナ */
 .flex {
     display: flex;
     justify-content: space-between;
 }
 
+/* 横並びのコンテナ2 */
 .flex2 {
     display: flex;
 }
 
+/* 大きい見出し */
 h1.big {
     color: black;
+    /* 色 */
     font-size: 40px;
+    /* フォントサイズ */
     margin-bottom: 10px;
+    /* 下のマージン */
 }
 
+/* 小見出し */
 h3 {
     margin: 0%;
+    /* マージン */
 }
 
+/* ラベル */
 label {
     font-size: 1.2em;
+    /* フォントサイズ */
     margin: 0 30px 0 30px;
+    /* マージン */
 }
 
+/* セレクトボックス */
 select[name=select] {
     height: 4.5em;
+    /* 高さ */
     width: 10em;
+    /* 幅 */
     border: 1px solid #ccc;
+    /* ボーダー */
     border-radius: 20px;
-    /*ジャンル欄の角を丸くする*/
+    /* 角丸 */
 }
 
+/* セレクトボックス2 */
 select[name=select2] {
-
     margin-left: 60px;
+    /* 左マージン */
     height: 3.5em;
+    /* 高さ */
     width: 15em;
+    /* 幅 */
     border: 1px solid #ccc;
+    /* ボーダー */
     border-radius: 20px;
+    /* 角丸 */
     text-align: center;
-
-    /*ジャンル欄の角を丸くする*/
+    /* 中央揃え */
 }
 
-
-
+/* 検索欄 */
 input[name=search] {
     height: 4em;
+    /* 高さ */
     width: 30em;
+    /* 幅 */
     margin: 8px 0 0 0;
+    /* マージン */
     border: 1px solid #ccc;
+    /* ボーダー */
     border-radius: 20px;
-    /*検索欄の角を丸くする*/
+    /* 角丸 */
 }
 
-
-/*ログインボタンの角を丸くする*/
-
-
+/* 画像 */
 img[name=photo] {
     margin: 30px 30px 0px 200px;
+    /* マージン */
 }
 
+/* 画像2 */
 img[name=photo2] {
     margin: 10px 30px 0px 20px;
+    /* マージン */
 }
 
-
+/* 送信ボタン */
 button[name=submit] {
     display: flex;
     align-items: center;
     height: 45px;
+    /* 高さ */
     border: none;
+    /* ボーダーなし */
     margin: 30px 250px 0px 30px;
+    /* マージン */
     padding: 5px 20px 0px 20px;
+    /* パディング */
     width: 260px;
+    /* 幅 */
     color: #ffffff;
+    /* テキスト色 */
     background-color: #35AFDB;
+    /* 背景色 */
     font-size: 1em;
+    /* フォントサイズ */
     border-radius: 10px;
+    /* 角丸 */
 }
 
+/* カラム */
 .column {
     display: block;
-    /* Change display to block to stack vertically */
     width: 100%;
-    /* Each column takes full width */
     color: black;
+    /* テキスト色 */
     margin: 30px 0px 0px 20px;
+    /* マージン */
 }
 
+/* タブコントロール */
 a[href="#tabpage1"] {
     margin: 0px 5px 0px 50px;
-
+    /* マージン */
 }
-
 
 a[href="#tabpage2"] {
     margin: 0px 0px 0px -10px;
+    /* マージン */
     display: none;
+    /* 非表示 */
 }
 
 #tabcontrol a {
     margin-top: 30px;
+    /* 上マージン */
     line-height: 4em;
+    /* 行の高さ */
     height: 40px;
+    /* 高さ */
     width: 670px;
+    /* 幅 */
     display: inline-block;
-    /* インラインブロック化 */
+    /* インラインブロック */
     border-width: 1px 1px 0px 1px;
-    /* 下以外の枠線を引く */
+    /* ボーダーの幅 */
     border-style: solid;
+    /* ボーダースタイル */
     text-align: center;
-    /* 枠線の種類：実線 */
+    /* 中央揃え */
     border-color: white;
-    /* 枠線の色：黒色 */
+    /* ボーダーの色 */
     border-radius: 20px 20px 0px 0px;
-    /* 枠線の左上角と右上角だけを丸く */
+    /* 角丸 */
     padding: 0px 30px 30px 0px;
-    /* 内側の余白 */
+    /* パディング */
     text-decoration: none;
-    /* リンクの下線を消す */
+    /* 下線を削除 */
     color: black;
-    /* 文字色：黒色 */
+    /* テキスト色 */
     background-color: gray;
-    /* 背景色：白色 */
+    /* 背景色 */
     font-weight: bold;
-    /* 太字 */
+    /* フォントの太さ */
     position: relative;
-    /* JavaScriptでz-indexを調整するために必要 */
+    /* 相対位置 */
 }
 
-
-
-
-
-
-
-/*必須*/
+/* 選択されたタブのスタイル */
 #tabcontrol a.selected {
     background-color: white;
+    /* 背景色 */
 }
 
-
-
-
-
-
-
-
-
-
-
+/* ボタン内の画像 */
 .bt img {
     width: 30px;
+    /* 幅 */
     height: 30px;
+    /* 高さ */
     margin-right: 7px;
+    /* 右マージン */
     margin-bottom: 5px;
+    /* 下マージン */
 }
 
-/* 削除ボタンのデザイン */
+/* 削除ボタンのスタイル */
 .delete-button {
     position: relative;
+    /* 相対位置 */
     bottom: 20px;
+    /* 下からの位置 */
     border: 1px solid black;
+    /* ボーダー */
     margin: -120px 20px 0px 10px;
+    /* マージン */
     padding: 5px 10px 0 10px;
+    /* パディング */
     background-color: #ffffff;
+    /* 背景色 */
     display: flex;
-    /* 複数の要素を横に並べるため */
+    /* フレックスレイアウト */
     align-items: center;
+    /* アイテムを中央揃え */
     border-radius: 10px;
-    /*四角の角を丸くする*/
-    align-items: center;
-    /* 中央に配置 */
+    /* 角丸 */
     gap: 8px;
+    /* アイテム間の間隔 */
 }
 
-/* 削除ボタンのデザイン */
+/* 別の削除ボタンのスタイル */
 .delete-button1 {
     position: relative;
+    /* 相対位置 */
     bottom: 25px;
+    /* 下からの位置 */
     border: 1px solid black;
+    /* ボーダー */
     margin: -121px 0px 0px 1100px;
+    /* マージン */
     padding: 5px 10px 0 10px;
+    /* パディング */
     background-color: #ffffff;
+    /* 背景色 */
     display: flex;
-    /* 複数の要素を横に並べるため */
+    /* フレックスレイアウト */
     align-items: center;
+    /* アイテムを中央揃え */
     border-radius: 10px;
-    /*四角の角を丸くする*/
-    align-items: center;
-    /* 中央に配置 */
+    /* 角丸 */
     gap: 8px;
+    /* アイテム間の間隔 */
 }
 
-
-
-
-
+/* コンテンツのスタイル */
 .contents {
     display: flex;
+    /* フレックスレイアウト */
     border: 1px solid black;
+    /* ボーダー */
     border-radius: 10px;
+    /* 角丸 */
     align-items: center;
-    /* 中央に配置 */
+    /* アイテムを中央揃え */
     gap: 5px;
+    /* アイテム間の間隔 */
     margin: 20px 0px 0px 0px;
-
-
+    /* マージン */
 }
 
-
+/* 別のコンテンツのスタイル */
 .contents1 {
     display: flex;
+    /* フレックスレイアウト */
     border: 1px solid black;
+    /* ボーダー */
     border-radius: 10px;
+    /* 角丸 */
     align-items: center;
-    /* 中央に配置 */
+    /* アイテムを中央揃え */
     gap: 5px;
+    /* アイテム間の間隔 */
     margin: 20px 0px 0px 0px;
-
-
+    /* マージン */
 }
 
+/* コンテンツ内のテキストスタイル */
 .contents p {
     color: #545454;
+    /* テキスト色 */
     margin: -180px 800px 0px 0px;
+    /* マージン */
 }
 
+/* 別のコンテンツ内のテキストスタイル */
 .contents1 p {
     color: #545454;
+    /* テキスト色 */
     margin: -178px 700px 0px 0px;
+    /* マージン */
 }
 
+/* 画像のスタイル */
 .image {
     margin: 10px 30px 20px 50px;
+    /* マージン */
 }
 
-
+/* 名前のスタイル */
 .namae {
     margin: -150px 30px 20px -20px;
+    /* マージン */
     display: flex;
+    /* フレックスレイアウト */
     position: relative;
+    /* 相対位置 */
 }
 
+/* 別の名前のスタイル */
 .namae1 {
     margin-top: 5px;
+    /* 上マージン */
 }
 
+/* 短い見出しのスタイル */
 h3.short {
     margin: -180px 0px 50px 260px;
+    /* マージン */
 }
 
+/* レビューのスタイル */
 .review {
     margin: -40px 0px 50px 260px;
+    /* マージン */
 }
 
+/* ハートアイコン */
 .heart {
     position: absolute;
+    /* 絶対位置 */
     width: 40px;
-    /* ハートの幅を小さくする */
+    /* 幅 */
     height: 36px;
-    /* ハートの高さを小さくする */
+    /* 高さ */
     left: 90%;
+    /* 左からの位置 */
     top: 57%;
-    /* ハートを垂直方向に中央揃え */
+    /* 上からの位置 */
     margin-top: -20px;
-    /* ハートを垂直方向に中央揃え */
+    /* 上のマージン */
     margin-left: -40px;
-    /* ハートを水平方向に中央揃え */
-
+    /* 左のマージン */
 }
 
+/* ハートアイコンの要素 */
 .heart::before,
 .heart::after {
     position: absolute;
+    /* 絶対位置 */
     content: "";
+    /* コンテンツ */
     left: 20px;
-    /* ハートの左半分の幅を調整 */
+    /* 左からの位置 */
     top: 0;
+    /* 上からの位置 */
     width: 20px;
-    /* ハートの幅をさらに小さくする */
+    /* 幅 */
     height: 32px;
-    /* ハートの高さをさらに小さくする */
+    /* 高さ */
     background: #f88dc8;
+    /* 背景色 */
     border-radius: 50px 50px 0 0;
+    /* 角丸 */
     transform: rotate(-45deg);
+    /* 45度回転 */
     transform-origin: 0 100%;
+    /* 回転の原点 */
 }
 
+/* ハートアイコンの要素2 */
 .heart::after {
     left: 0;
+    /* 左からの位置 */
     transform: rotate(45deg);
+    /* 45度回転 */
     transform-origin: 100% 100%;
+    /* 回転の原点 */
 }
 
+/* ハートの数 */
 .heart-count {
     position: absolute;
+    /* 絶対位置 */
     left: 45px;
-    /* 数字の左端位置を調整 */
+    /* 左からの位置 */
     top: 45%;
-    /* 数字を垂直方向に中央揃え */
+    /* 上からの位置 */
     transform: translateY(-50%);
-    /* 数字を中央揃えにするための調整 */
+    /* 垂直方向の中央揃え */
     font-size: 14px;
-    /* 数字のフォントサイズを調整 */
+    /* フォントサイズ */
     color: #545454;
-    /* 数字の色を指定 */
+    /* テキスト色 */
 }
 
-
-
-
-
-/*必須*/
+/* 選択されたエリア */
 .area.selected {
     display: block;
-
+    /* ブロック要素として表示 */
 }
 
+/* エリア */
 .area {
     border: 1px solid white;
-    /* 枠線：黒色の実線を1pxの太さで引く */
+    /* ボーダー */
     margin: -16px 50px 0px 50px;
-    /* 上側にあるタブと1pxだけ重ねるために「-1px」を指定 */
+    /* マージン */
     padding: 1em;
-    /* 内側の余白量 */
+    /* パディング */
     background-color: white;
-    /* 背景色：白色 */
-
-    /* z-indexを調整するために必要 */
-
-    /* 重なり順序を「最も背面」にするため */
-
+    /* 背景色 */
+    overflow-y: scroll;
+    /* 縦スクロール */
     height: 500px;
+    /* 高さ */
     display: none;
+    /* 非表示 */
 }
 
-
+/* タブページ1 */
 #tabpage1 {
     position: relative;
-    /* tabpage1 が親要素 */
-
+    /* 相対位置 */
     height: 500px;
-    /* 適切な高さに設定 */
+    /* 高さ */
 }
 
+/* 新しいレビュー */
 .newreview {
     position: sticky;
-    /* 親要素に対して絶対位置を指定 */
+    /* スティッキー位置 */
     bottom: -100px;
-    /* 下端からの位置 */
+    /* 下からの位置 */
     right: 100px;
+    /* 右からの位置 */
     margin-left: 1200px;
+    /* 左マージン */
     margin-top: 200px;
-    /* 右端からの位置 */
+    /* 上マージン */
     z-index: 10;
-    /* 他の要素よりも手前に表示 */
+    /* Zインデックス */
 }
