--- a/doc/レコレコ/css/postmodal.css
+++ b/doc/レコレコ/css/postmodal.css
@@ -80,7 +80,7 @@ input[name=submit] {
   padding: 20px 30px 20px 50px;
   width: 500px;
   color: #ffffff;
-  background-color: #1e90ff;
+  background-color: #35AFDB;
   font-size: 1.2em;
   border-radius: 20px; /*ボタンの角を丸くする*/
 }
@@ -91,7 +91,7 @@ input[name=submit1] {
   padding: 10px 20px 10px 20px;
   width: 230px;
   color: #ffffff;
-  background-color: #1e90ff;
+  background-color: #35AFDB;
   font-size: 1.2em;
   border-radius: 20px; /*ボタンの角を丸くする*/
 }
