--- a/doc/レコレコ/css/searchResult.css
+++ b/doc/レコレコ/css/searchResult.css
@@ -1,10 +1,7 @@
-@charset "UTF-8";
 * {
     margin: 0;
     padding:0;
-    box-sizing:border-box;
-    }
-
+    box-sizing:border-box;}
 html {
     font-size: 16px;
     font-family: sans-serif;
@@ -29,15 +26,15 @@ position:relative;
     background-color: #B3C8CF;
     width: 80%;
     height: 10%;
-
+    
 }
 
 h2 {
-
+    
     text-align: center;
     color:white;
     margin: 60px 0px 0px 0px;
-    padding: 10px 0px 10px 0px;
+    padding: 10px 0px 10px 0px; 
     border:1px solid black;
 }
 
@@ -79,7 +76,7 @@ h3 {
     left:50%;
     transform: translate(-50%);
     margin:10px;
-
+    
 }
 .resultinfo{
     position:absolute;
@@ -92,7 +89,7 @@ h3 {
 .contenttitle{
     font-size: 2rem;
 
-
+   
 }
 .reultform{
     position:absolute;
@@ -107,11 +104,11 @@ h3 {
     font-size: 1em;
     background-color: #35afdb;
     color: #fff;
-    border-radius: 10px;
-    align-items: center;
+    border-radius: 10px; 
+    align-items: center; 
     padding: 5px 20px 0px 20px;
     display: flex;
-
+  
 }
 
 .button1 {
@@ -122,11 +119,11 @@ h3 {
     font-size: 1em;
     background-color: #35afdb;
     color: #fff;
-    border-radius: 10px;
-    align-items: center;
+    border-radius: 10px; 
+    align-items: center; 
     padding: 5px 20px 0px 20px;
     display: flex;
-}
+} 
 
 
 .nav ul {
