--- a/doc/レコレコ/css/chatmodal.css
+++ b/doc/レコレコ/css/chatmodal.css
@@ -1,3 +1,59 @@
+        /* モーダルのスタイル */
+        .modal {
+          display: none;
+          position: fixed;
+          z-index: 1;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          background-color: rgb(0,0,0);
+          background-color: rgba(0,0,0,0.4);
+      }
+
+      .modal-content {
+          background-color: #fefefe;
+          margin: 15% auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 40%;
+          height: 80%;
+          border-radius: 13px;
+          box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+          margin-top: 50px;
+          margin-bottom: 125px;
+      }
+
+      .close {
+          color: #aaa;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+      }
+
+.close:hover,.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn {
+  display: block;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
